# TeliodEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.txt  main.cpp  test_ECS.cpp  test_SceneGraph.cpp
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stbi/: CMakeLists.txt
res/raw/meshes/: car.fbx  cube.fbx  ground.fbx  torus.fbx  tower.fbx
res/raw/shaders/: Phong_Bling.yaml  default.yaml  default_fs.glsl  default_vs.glsl  phong_textured.yaml  phong_textured_fs.glsl  phong_textured_vs.glsl  textured.yaml  textured_fs.glsl  textured_vs.glsl
src/: CMakeLists.txt
src/ECS/: CMakeLists.txt  ECS.cpp
src/ECS/include/: ECS.h  ECS.inl
src/ECS/include/ECS/: ECS.h  ECS.inl
src/SceneGraph/: CMakeLists.txt  SceneGraph.cpp  WorldTransformSystem.cpp
src/SceneGraph/include/: SceneGraph.h  Transform.h  WorldTransformSystem.h
src/SceneGraph/include/SceneGraph/: SceneGraph.h
src/core/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/ECS/: ECS.cpp
src/engine/ECS/include/ECS/: ECS.h  ECS.inl
src/engine/SceneGraph/: CMakeLists.txt  SceneGraph.cpp  Transform.cpp  WorldTransformSystem.cpp
src/engine/SceneGraph/include/SceneGraph/: Transform.h  Transform.inl  WorldTransformSystem.h
src/engine/core/: Application.cpp  CMakeLists.txt  Camera.cpp  Components.cpp  GlobalSettings.cpp  InputManager.cpp  MeshResource.cpp
src/engine/core/include/core/: Application.h  Camera.h  Components.h  GlobalSettings.h  InputManager.h  MeshResource.h  ResourceManager.h  ResourceManager.inl
src/engine/physics/: CMakeLists.txt  Geometry.cpp  PhysicsSystem.cpp  Rigidbody.cpp
src/engine/physics/include/physics/: CollisionManifold.h  Geometry.h  Geometry.inl  PhysicsSystem.h  Rigidbody.h  Rigidbody.inl
src/engine/render/: CMakeLists.txt  Components.cpp  MeshRendererSystem.cpp  RenderBackend.cpp  ShaderResource.cpp  TextureResource.cpp
src/engine/render/include/render/: Components.h  MeshRendererSystem.h  RenderBackend.h  ShaderResource.h  TextureResource.h
src/game/: GameApplication.cpp
src/game/include/game/: GameApplication.h
test/: CMakeLists.txt  test_Assimp.cpp  test_ECS.cpp  test_ResManager.cpp  test_ShaderManager.cpp  test_Window.cpp  test_glm.cpp
